@@ -477,3 +477,8 @@ La particularidad es que ese archivo tiene bloques a final de microdrive y al pr
   bit 4 = Cancel entries in 8x5 matrix for extended keys
   bit 3 = ULA+ enable (soft reset = 0)
   bit 2 = ULA half pixel scroll (may change) (soft reset = 0)
+
+
+  -ventana video layers hacerla que se pueda ejecutar en background
+
+-tiles que no salgan de pagina 16kb ram5 o 8bk de ram7
