@@ -320,6 +320,8 @@ extern void tbblue_get_string_palette_format(char *texto);
 extern int tbblue_get_offset_start_layer2_reg(z80_byte register_value);
 extern int tbblue_get_offset_start_tilemap(void);
 extern int tbblue_get_offset_start_tiledef(void);
+extern z80_byte tbblue_get_ram_page_tilemap(void);
+extern z80_byte tbblue_get_ram_page_tiledef(void);
 
 extern int tbblue_get_tilemap_width(void);
 extern int tbblue_if_tilemap_enabled(void);
