@@ -47,6 +47,7 @@ Improved Spectrum Next emulation:
 - Added Layer modes 6 and 7 (blend modes)
 - Fixed esxdos call DISK_FILEMAP
 - Fixed palette offset for layer 2
+- Allow tiles on RAM 7
 
 Improved Debug:
 - CPU history: allow to change memory pointer to the PC register show in history
